# DeepTodos

./: .gitignore  LICENSE  README.md  README_backup.md  Todo.lnk  app.py  deeptodo.db  favorites_12_18_25.html  requirements.txt  start.bat  stop.bat  test.py
.github/scripts/: update_structure.sh
.github/workflows/: ci.yml
AI/: demo.py
backend/deeptodos/: main.py  pyproject.toml  pytest.ini  run_tests.py
backend/deeptodos/app/: app.py  create_user.py  db.py  users.py
backend/deeptodos/src/: app.py  lifecycle.py
backend/deeptodos/src/authentication/: create_user.py  db.py  routers.py  schemas.py  users.py
backend/deeptodos/src/core/: database.py
backend/deeptodos/src/deeptodos/: helper.py  routers.py  schemas.py  tasks.py
backend/deeptodos/tests/: conftest.py  test_authentication.py  test_authentication_integration.py
backend/deeptodos/tests/authentication/: README.md  TESTING.md  __init__.py  test_authentication.py  test_authentication_integration.py
backend/deeptodos/tests/deeptodos/: README.md  TESTING.md  __init__.py  conftest.py  test_deeptodos.py  test_deeptodos_integration.py
database/initialization/: initialize_table_tasks.py  initialize_table_tasks_priority.py  initialize_table_users.py
database/operation_handling/: handle_table_tasks.py  handle_table_users.py
frontend/deeptodos/: .prettierignore  .prettierrc  README.md  components.d.ts  eslint.config.ts  (+6 more)
navigation/: route_navigation.py
session/: handle_login_session.py
static/: changePassword.css  login.css  style.css  tasks.css
templates/: index.html  tasks.html  test.html
(+159 files in other folders)
