[project]
name = "deeptodos"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.5",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "uvicorn[standard]>=0.38.0",
]
